Use original designer list and guard color value handling

--- a/templates/spec-creator-tab.html
+++ b/templates/spec-creator-tab.html
@@ -68,12 +68,13 @@
                 <div class="form-group">
                     <label for="designer" class="form-label">DISEÑADOR:</label>
                     <select id="designer" class="form-control">
-                        <option value=""></option>
-                        <option value="Elmer">Elmer</option>
-                        <option value="Daniel">Daniel</option>
-                        <option value="Katherine">Katherine</option>
-                        <option value="Luis">Luis</option>
-                        <option value="Maria">Maria</option>
+                        <option value="">Seleccionar...</option>
+                        <option value="ELMER VELEZ">ELMER VELEZ</option>
+                        <option value="DANIEL HERNANDEZ">DANIEL HERNANDEZ</option>
+                        <option value="CINDY PINEDA">CINDY PINEDA</option>
+                        <option value="FERNANDO FERRERA">FERNANDO FERRERA</option>
+                        <option value="NILDA CORDOBA">NILDA CORDOBA</option>
+                        <option value="OTRO">OTRO</option>
                     </select>
                 </div>
             </div>
