--- a/templates/spec-creator-tab.html
+++ b/templates/spec-creator-tab.html
@@ -104,6 +104,7 @@
         </div>
         <div class="card-body">
             <div class="global-actions">
+                <button type="button" class="btn btn-primary" onclick="saveCurrentSpec()"><i class="fas fa-save"></i> Guardar Spec</button>
                 <button type="button" class="btn btn-success" onclick="exportPDF()"><i class="fas fa-file-pdf"></i> Exportar a PDF</button>
                 <button type="button" class="btn btn-secondary" onclick="exportToExcel()"><i class="fas fa-file-excel"></i> Exportar a Excel</button>
                 <button type="button" class="btn btn-danger" onclick="clearForm()"><i class="fas fa-trash"></i> Limpiar Formulario</button>
