Switch export action to download styled spec HTML file

--- a/templates/spec-creator-tab.html
+++ b/templates/spec-creator-tab.html
@@ -105,7 +105,7 @@
         <div class="card-body">
             <div class="global-actions">
                 <button type="button" class="btn btn-primary" onclick="saveCurrentSpec()"><i class="fas fa-save"></i> Guardar Spec</button>
-                <button type="button" class="btn btn-success" onclick="printTechnicalSpec()"><i class="fas fa-file-pdf"></i> Generar PDF</button>
+                <button type="button" class="btn btn-success" onclick="exportPDF()"><i class="fas fa-file-pdf"></i> Descargar HTML Spec</button>
                 <button type="button" class="btn btn-secondary" onclick="exportToExcel()"><i class="fas fa-file-excel"></i> Exportar a Excel</button>
                 <button type="button" class="btn btn-danger" onclick="clearForm()"><i class="fas fa-trash"></i> Limpiar Formulario</button>
                  <button type="button" class="btn btn-primary" onclick="downloadProjectZip()"><i class="fas fa-file-archive"></i> Descargar Proyecto (.zip)</button>
