--- a/templates/spec-creator-tab.html
+++ b/templates/spec-creator-tab.html
@@ -121,7 +121,7 @@
         <div class="card-body">
             <div class="global-actions">
                 <button type="button" class="btn btn-primary" onclick="saveCurrentSpec()"><i class="fas fa-save"></i> Guardar Spec</button>
-                <button type="button" class="btn btn-success" onclick="exportPDF()"><i class="fas fa-file-pdf"></i> Descargar HTML Spec</button>
+                <button type="button" class="btn btn-success" onclick="exportHTML()"><i class="fas fa-file-pdf"></i> Descargar HTML Spec</button>
                 <button type="button" class="btn btn-warning" onclick="exportToExcel()"><i class="fas fa-calculator"></i> Calculadora</button>
                 <button type="button" class="btn btn-danger" onclick="clearForm()"><i class="fas fa-trash"></i> Limpiar Formulario</button>
                  <button type="button" class="btn btn-primary" onclick="downloadProjectZip()"><i class="fas fa-file-archive"></i> Descargar Proyecto (.zip)</button>
